tests/suite/fail/generated/types/fail_logical_i32_or_i32.ny
fn main() {
    let _ = 1 || 2 //~ ERROR requires bool
}
